# simplicio-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.backup-2026-05-27.md  README.md  RELATORIO_CONSOLIDADO_E_RECOMENDACAO.md  bootstrap.ps1  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.agents/: README.md  simplicio-ralph.agent.md
.claude/hooks/: session-start-skills.ps1
.codex/hooks/: pre-commit.ps1  session-start-skills.ps1
.github/: PSScriptAnalyzerSettings.psd1  copilot-instructions.md  dependabot.yml
.github/workflows/: check-deps.yml  ci.yml  docs-site.yml  dod.yml  publish-npm.yml  scaffold-self-check.yml
.simplicio/: bench_out.txt  precedent-index.json  project-map.json  runs.jsonl
.skills/: README.md
.skills/llm-verification/: SKILL.md
.skills/skill-opt/: SKILL.md
.specs/architecture/: ADR-002-simplicio-ralph-composition.md  ADR-003-qwen15b-quant-viability.md
.specs/workflow/: DEPENDENCY_POLICY.md
bench/: CASE_fullstack_add_field_sindico.md  CONSOLIDATED_REPORT.en.md  CONSOLIDATED_REPORT.md  ISSUE_CLOSURE_EVIDENCE.md  LLM_REDUCTION_ROADMAP.md  RESULTS_LOCAL_GGUF.md  SCRATCH_MODE_RFC.md  SIMPLICIO_FLOW_GUIDE.md  SIMPLICIO_PROMPT_ADJUSTMENTS.md  SIMPLICIO_PROMPT_ROADMAP.md  UNIFIED_RUN_ARCHITECTURE.md  cases.json  cases_offline.json  compare_sp.py  compare_versions.py  consolidate_4side_report.py  consolidate_full_report.py  consolidate_v13_report.py  exec_cases.py  interim_v13_report.py  interim_v14_report.py  qwen15b_quant_curve_manifest.json  results.html  results.json  results.md  results_4quadrant.json  results_4quadrant.md  results_4quadrant_detailed.md  results_4quadrant_full.json  results_4quadrant_full.md  results_4quadrant_wide.json  results_4quadrant_wide.md  results_4side_qwen3.md  results_all.json  results_comparison.md  results_exec.json  results_exec.md  results_exec_sindico.json  results_exec_sindico.md  results_fanout.json  (+81 more)
bench/artifacts/: codex-goal-feature-auth-flow.jsonl  codex-goal-single-file-task.jsonl  codex-goal-sprint-checkout-hardening.jsonl
bench/artifacts/unified-live-matrix/: feature-auth-flow-cli_ag.json  feature-auth-flow-unified_feature.json  feature-auth-flow-unified_sprint-state.json  feature-auth-flow-unified_sprint.json  single-file-task-cli_ag.json  single-file-task-unified_feature.json  single-file-task-unified_sprint-state.json  single-file-task-unified_sprint.json  sprint-checkout-hardening-cli_ag.json  sprint-checkout-hardening-unified_feature.json  sprint-checkout-hardening-unified_sprint-state.json  sprint-checkout-hardening-unified_sprint.json
bench/fixtures/: unified_run_live_results.example.json
bench/sindico_hidden/: AdminOnlyAllowedRolesTest.php  BaseRepositoryBuildUpdateSqlTest.php  BaseRepositoryBuildWhereSqlTest.php  EnvGetBoolTest.php  EnvGetIntTest.php  PasswordAssessTest.php  PasswordRequireSymbolTest.php  PasswordStrengthTest.php  RateLimitBucketKeyTest.php  RouterExtractParamsTest.php  RouterHasTest.php  _seed_PasswordPolicy_bug.php
bench/skillopt_pending_skills/: README.md
bench/skillopt_pending_skills/codegen-disabled-baseline-review/: SKILL.md
bench/skillopt_pending_skills/fastapi-crud-scaffold-review/: SKILL.md
bench/skillopt_pending_skills/go-gin-release-review/: SKILL.md
bench/skillopt_pending_skills/issue-closure-audit-traceability-review/: SKILL.md
bench/skillopt_pending_skills/laravel-api-crud-scaffold-review/: SKILL.md
bench/skillopt_pending_skills/rust-axum-release-review/: SKILL.md
docs/: LLM_USAGE_POLICY.md  agent-architecture.md  benchmark-4quadrant.md
docs/adr/: 0001-qwen15b-schema-v1-quant-decision.md
docs/features/: frontend-verify.md
docs/specs/: STRUCTURED_OUTPUT_v1.md
models/: Modelfile.q5km  Modelfile.q8
rust/simplicio-core/: Cargo.toml  pyproject.toml
rust/simplicio-core/src/: lib.rs
scripts/: evidence.ps1  start.ps1  test.ps1  update-starter.ps1
scripts/demo/: frontend_verify_demo.py
simplicio/: _cache.py  adaptive.py  bench.py  cache.py  cache_cli.py  cli.py  detect.py  doctor.py  dod.py  ecosystem.py  hardware.py  init.py  intent.py  local_models.py  mapper.py  observability.py  pipeline.py  pipeline_fixers.py  precedent.py  prompt.py  providers.py  skill_router.py  sprint_loader.py
simplicio/orchestrator/: __init__.py  cost_governor.py  feature.py
simplicio/scratch/: __init__.py  _pipeline_adapter.py  cli.py  executor.py  plan_schema.py  planner.py  recipes.py  skill_opt.py  stack_registry.py
simplicio/templates/: SKILL.md  simplicio_prompt.md  userpromptsubmit-hook.sh
simplicio/templates/stacks/py-fastapi/tree/: .gitignore  README.template.md  pyproject.toml  ruff.toml
simplicio/templates/stacks/py-fastapi/tree/src/: main.py
simplicio/templates/stacks/py-fastapi/tree/src/api/: __init__.py
simplicio/templates/stacks/py-fastapi/tree/tests/: test_health.py
simplicio/utils/: __init__.py  cache.py  http_client.py  serialization.py
tests/e2e/: README.md  cli.spec.ts  frontend-flow.spec.ts
tests/python/: test_cache.py  test_cli_autoinstall.py  test_cost_governor.py  test_detect.py  test_init.py  test_intent.py  test_issue_closure_audit.py  test_llm_reduction_summary.py  test_local_models.py  test_mapping_retry_flow.py  test_orchestrator_feature.py  test_package_metadata.py  test_pipeline_fixers.py  test_planner_provider.py  test_providers_local.py  test_providers_shellout.py  test_qwen15b_quant_curve_report.py  test_recipes.py  test_run_cli.py  test_rust_prompt.py  test_schema_smoke_summary.py  test_scratch.py  test_scratch_cache_gate.py  test_scratch_cli_recipes.py  test_scratch_codegen.py  test_scratch_codegen_bench.py  test_scratch_codegen_fastapi.py  test_scratch_codegen_go_gin.py  test_scratch_codegen_markdown.py  test_scratch_codegen_next_page.py  test_scratch_codegen_next_route.py  test_scratch_codegen_orm.py  test_scratch_codegen_php_laravel.py  test_scratch_codegen_pydantic.py  test_scratch_codegen_pytest.py  test_scratch_codegen_rust_axum.py  test_scratch_live_gate.py  test_scratch_recipes_bench.py  test_scratch_release_gate.py  test_skillopt_review_packet.py  (+5 more)
(+338 files in other folders)
