[package]
name = "simplicio-core"
version = "0.1.0"
edition = "2021"
description = "Rust hot-path implementations for simplicio-cli (issues #17 / #18)."
license = "MIT"

[lib]
name = "simplicio_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
bumpalo = { version = "3", features = ["collections"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
