[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "simplicio-core"
version = "0.1.0"
description = "Rust hot-path extension for simplicio-cli (issues #17 / #18)."
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "simplicio_core"
